--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "clean": "rimraf dist node_modules package-lock.json"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -21,12 +20,8 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
-    "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
-  },
-  "overrides": {
-    "rollup": "^4.9.6"
   }
 }
