--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,10 @@
 [build]
-  command = "npm run build"
+  command = "npm run prebuild && npm run build"
   publish = "dist"
 
 [build.environment]
   NODE_VERSION = "18"
-  NPM_FLAGS = "--no-optional"
+  NPM_FLAGS = "--no-optional --legacy-peer-deps"
 
 [[redirects]]
   from = "/*"
@@ -19,5 +19,7 @@
 [build.processing.js]
   bundle = true
   minify = true
+[build.processing.html]
+  pretty_urls = true
 [build.processing.images]
   compress = true
