--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,15 @@
 [build]
-  command = "npm run prebuild && npm run build"
+  command = "npm run build"
   publish = "dist"
-
-[build.environment]
-  NODE_VERSION = "18"
-  NPM_FLAGS = "--no-optional --legacy-peer-deps"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+[build.environment]
+  NODE_VERSION = "20"
+  NPM_FLAGS = "--no-audit --no-fund"
 
 [build.processing]
   skip_processing = false
